--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Unit 1: Day 1 - Image Gallery</title>
+<link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 <style type="text/css" media="screen">
 	body{
 		background-color: black;
@@ -22,15 +23,24 @@
 		width: 15%;
 		/* set the borders in shorthand */
 		border: 4px solid #555;
+		border-radius: 100%;
+		margin: 0px;
 	}
 	#middle img:hover{
 		border: 4px solid #0CF;
+		border-radius: 100%;
 		/* make the mouse a hand when the user is over the pic */
 		cursor: pointer;
 	}
 	#bottom img{
 		/* Force the img to be 55% the width of wrapper */
 		width: 55%;
+		border: 1px solid black;
+		border-radius: 5%;
+	}
+	h2{
+		font-family: 'Fjalla One', sans-serif;
+		font-size: 40px;
 	}
 </style>
 
@@ -62,4 +72,3 @@
 	</div>
 </body>
 </html>
-
