--- a/photos-alt-float.html
+++ b/photos-alt-float.html
@@ -18,37 +18,48 @@
 		min-height: 100vh;
 			/* vh means viewport height. this makes the height at least as tall as the screen. */
 		/* float: left; */
+		/* Using overflow so children will tell gallery div their size. */
+		/* "Floats are the devil." -Rob */
 		overflow: hidden;
 	}
 	#left{
-		/* i make the div 20% of the width of my parent */
-		width: 20%;
-		/* i float to the left and don't acknowledge anything else */
-		float: left;
+		/* My children tuhmbnails are floating. I need to know. Overflow!!! */
+		overflow: hidden;
+		/* Make me 75% */
+		width: 75%;
+		margin: auto;
 	}
 
 	#left img{
-		width: 50%;
-		border: 2px solid #0CF;
-		border-radius: 35%;
+		/* width: 50%; */
+		/* border: 2px solid #0CF; */
+		/* border-radius: 35%; */
 	}
 	
 	#left img:hover{
-		border: 2px solid #F00;
-		border-radius: 35%;
+		/* border: 2px solid #F00; */
+		/* border-radius: 35%; */
 		/* make the mouse a hand when the user is over the pic */
 		cursor: pointer;
 	}
 
 	#right{
-		width: 60%;
-		float: left;
-		padding-top: 10px;
+
 	}
 
 	#right img{
 		border: 4px solid #0CF;
 		border-radius: 35%;
+	}
+
+	.thumbnail{
+		width: 20%;
+		float: left;
+		box-sizing: border-box;
+	}
+
+	.one{
+		/* border: 4px solid red; */
 	}
 
 	img{
@@ -72,11 +83,23 @@
 		</div>
 		<!-- Make the left-hand div -->
 		<div id="left">
-			<img src="images/image1.jpg" alt="picture of a galaxy" onmouseover="largePic.src='images/image1.jpg'">
-			<img src="images/image2.jpg" alt="picture of a nebula" onmouseover="largePic.src='images/image2.jpg'">
-			<img src="images/image3.jpg" alt="picture of a comet" onmouseover="largePic.src='images/image3.jpg'">
-			<img src="images/image4.jpg" alt="picture of uranus" onmouseover="largePic.src='images/image4.jpg'">
-			<img src="images/image5.jpg" alt="picture of saturn" onmouseover="largePic.src='images/image5.jpg'">
+		<!-- Add a div to hold an image. Divs are nice b/c they are blocks. Imgs are NOT b/c they are inline. -->
+		<!-- Also, same class to control them all. Add unique class to target each one. -->
+			<div class="thumbnail one">
+				<img src="images/image1.jpg" alt="picture of a galaxy" onmouseover="largePic.src='images/image1.jpg'">
+			</div>
+			<div class="thumbnail two">
+				<img src="images/image2.jpg" alt="picture of a nebula" onmouseover="largePic.src='images/image2.jpg'">
+			</div>
+			<div class="thumbnail three">
+				<img src="images/image3.jpg" alt="picture of a comet" onmouseover="largePic.src='images/image3.jpg'">
+			</div>
+			<div class="thumbnail four">
+				<img src="images/image4.jpg" alt="picture of uranus" onmouseover="largePic.src='images/image4.jpg'">
+			</div>
+			<div class="thumbnail five">
+				<img src="images/image5.jpg" alt="picture of saturn" onmouseover="largePic.src='images/image5.jpg'">
+			</div>
 		</div>
 
 		<!-- make the right-hand div for our preview -->
